<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditAct">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="2"
            android:width="0dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/edit_title"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_price"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/less_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="-" />

            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:layout_weight="1"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:text = "0"/>

            <Button
                android:id="@+id/more_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="+" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/title_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="2"
            android:width="0dp"
            android:text="@string/supp" />

        <EditText
            android:id="@+id/edit_supp"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:hint="@string/hint_supp"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            android:paddingRight="4dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/suppPhone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="2"
            android:width="0dp"
            android:text="@string/phone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">
        <EditText
            android:id="@+id/edit_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_supp_phone"
            android:inputType="phone"
            android:paddingLeft="8dp"
            android:paddingRight="4dp" />
            <Button
                android:id="@+id/call_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Call"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
